--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(Stb REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
+find_package(spdlog CONFIG REQUIRED)
 
 add_library(${PROJECT_NAME} STATIC
         ${SOURCES}
@@ -18,9 +19,9 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
-        glad::glad
         OpenGL::GL
         glfw
+        glad::glad
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
@@ -31,6 +32,7 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
         MiniMotor_compiler_flags
         glm::glm
         nlohmann_json::nlohmann_json
+        spdlog::spdlog_header_only
 )
 
 target_precompile_headers(${PROJECT_NAME} PUBLIC
